# Microsoft-Azure-Predictive-Maintenance

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  technical_design.ipynb  technical_report.ipynb
src/: app.py  data_acquisition.py  data_preprocessing.py  eda.py  functions.py  main.py  model.py  my_module.py
